--- a/app/views/register/business-sector.html
+++ b/app/views/register/business-sector.html
@@ -27,33 +27,38 @@ GOV.UK prototype kit
 		<input id="sector{{name}}" name="business-sectors" type="radio" value="{{ name }}">
 		<label for="sector{{name}}">{{ name | capitalize}}</label>
 	</div>
-
 </li>
 {% endmacro %}
 
 		
 
 <main id="content" role="main">
-	{% if errorMissingTitle %}
-		<div class="grid-row">
-			<div class="error-summary column-two-thirds" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1" style="border:6px solid #e41f13">
 
-				<h2 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
-					Missing sector
-				</h2>
+	<!-- CONDITIONAL ERROR  -->
+	{% if errorsExist %}
+		<div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1" style="width:620px;">
 
-				<ul class="error-summary-list">
-					<li><a href="#sector-section" style="color:#e41f13">You need to select a sector</a></li>
-				</ul>
+			<h2 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
+				Missing fields
+			</h2>
 
-			</div>
+			<p>
+				Please check the following errors and try again.
+			</p>
+
+			<ul class="error-summary-list">
+				{% if errorMissingSector %}
+				<li><a href="#sector-section">Sector: missing</a></li>
+				{% endif %}
+			</ul>
 		</div>
 	{% endif %}
 
-	<h1 class="heading-large">
+
+
+	<h1 class="heading-large" style="font-weight:400; font-size:48px; margin-top:40px;">
 		Which sector do you work in?
     </h1>
-
 
 
 
@@ -74,7 +79,7 @@ GOV.UK prototype kit
 				</div>
 			</details>
 
-		   <form  method="post" class="form">
+		    <form  method="post" class="form">
 
 			  <fieldset class="form-group">
 
@@ -90,10 +95,10 @@ GOV.UK prototype kit
 				{% set items = ["Aerospace","Agriculture, Horticulture and fisheries","Airports","Automotive","Biotechnology and pharmaceuticals","Business Consumer Services","Chemicals","Clothing, Footwear Fashion","Communications","Construction","Creative and Media","Education and Training","Electronics and IT Hardware","Environment","Financial and Professional Services","Food and Drink","Giftware, Jewellery Tableware","Global Sports Infrastructure","Healthcare Medical","Household Goods, Furniture Furnishings","Leisure Tourism","Marine","Mechanical Electrical Process Engineering","Metallurgical Process Plant","Metals, Minerals and Materials","Mining","Oil and Gas","Ports Logistics","Power","Railways","Renewable Energy","Retail and Luxury","Security","Software and computer Services","Textiles, Interior Textiles and Carpets","Water"] %}
 
 
-				<div class="form-group {% if errorMissingTitle %} form-group-error	{% endif %}" id="sector-section">
+				<div class="form-group {% if errorMissingSector %} form-group-error	{% endif %}" id="sector-section">
 
 
-					{% if errorMissingTitle %}
+					{% if errorMissingSector %}
 					  <span class="error-message">
 						  Select one sector
 					  </span>
