--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,22 +23,17 @@
       </h1>
 
 
+      <h2 class="heading-medium">Resuming the project</h2>
+
+      <p><a href="/handover-notes">Notes from the old team</a></p>
+
+
+
+      <br>
+      <br>
       <br>
       <p><a href="/clear-session">Start fresh</a></p>
 
-
-      <h2 class="heading-medium">Testing</h2>
-      <p><a href="/testing-scenario-1">New user</a></p>
-      <p><a href="/testing-scenario-2">Returning user</a></p>
-      <p><a href="/testing-scenario-3">Returning events user</a></p>
-
-
-
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
 
 
       <h2 class="heading-medium">Event producer</h2>
@@ -82,10 +77,16 @@
       <br/>
       <br/>
       <br/>
-      <br/>
-      <br/>
 
       <h2 class="heading-medium">Other stuff</h2>
+
+
+
+      <h2 class="heading-medium">February 2018 - Attendee Registration Testing</h2>
+      <p><a href="/testing-scenario-1">New user</a></p>
+      <p><a href="/testing-scenario-2">Returning user</a></p>
+      <p><a href="/testing-scenario-3">Returning events user</a></p>
+
 
 
       <h2 class="heading-medium">December 2017</h2>
